put routes, rest routes, validation
